--- a/XOSkinWebApp/Views/Checkout/OrderConfirmation.cshtml
+++ b/XOSkinWebApp/Views/Checkout/OrderConfirmation.cshtml
@@ -80,16 +80,16 @@
       <h4>Billing and Shipping</h4><br />
       <div class="form-group">
         <div style="display: inline; float: left; vertical-align: middle">
-          <label class="control-label font-weight-bolder">Order Confirmation Number:</label>
+          <label class="control-label">Order Confirmation Number:</label>
         </div>
         <div style="display: inline;">&nbsp;</div>
         <div style="display: inline;">
-          <span class="font-weight-bolder">@Html.Raw(Model.OrderId)</span>
+          <span class="font-weight-bolder">@Html.Raw("#XO" + (Model.OrderId + 10000))</span>
         </div>
       </div>
       <div class="form-group">
         <div style="display: inline;">
-          <label class="control-label font-weight-bolder">Sub-Total:</label>
+          <label class="control-label">Sub-Total:</label>
         </div>
         <div style="display: inline;">&nbsp;</div>
         <div style="display: inline;">
@@ -98,7 +98,7 @@
       </div>
       <div class="form-group">
         <div style="display: inline;">
-          <label class="control-label font-weight-bolder">(+) Taxes:</label>
+          <label class="control-label">(+) Taxes:</label>
         </div>
         <div style="display: inline;">&nbsp;</div>
         <div style="display: inline;">
@@ -107,7 +107,7 @@
       </div>
       <div class="form-group">
         <div style="display: inline;">
-          <label class="control-label font-weight-bolder">(+) Shipping:</label>
+          <label class="control-label">(+) Shipping:</label>
         </div>
         <div style="display: inline;">&nbsp;</div>
         <div style="display: inline;">
@@ -116,7 +116,7 @@
       </div>
       <div class="form-group">
         <div style="display: inline;">
-          <label class="control-label font-weight-bolder">(-) Code Discount:</label>
+          <label class="control-label">(-) Code Discount:</label>
         </div>
         <div style="display: inline;">&nbsp;</div>
         <div style="display: inline;">
@@ -125,7 +125,7 @@
       </div>
       <div class="form-group">
         <div style="display: inline;">
-          <label class="control-label font-weight-bolder">(-) Coupon Discount:</label>
+          <label class="control-label">(-) Coupon Discount:</label>
         </div>
         <div style="display: inline;">&nbsp;</div>
         <div style="display: inline;">
@@ -134,7 +134,7 @@
       </div>
       <div class="form-group">
         <div style="display: inline;">
-          <label class="control-label font-weight-bolder">(=) Total:</label>
+          <label class="control-label">(=) Total:</label>
         </div>
         <div style="display: inline;">&nbsp;</div>
         <div style="display: inline;">
@@ -143,7 +143,7 @@
       </div>
       <div class="form-group">
         <div style="display: inline;">
-          <label class="control-label font-weight-bolder">Billed:</label>
+          <label class="control-label">Billed:</label>
         </div>
         <div style="display: inline;">&nbsp;</div>
         <div style="display: inline;">
@@ -152,7 +152,7 @@
       </div><br />
       <div class="form-group">
         <div style="display: inline;">
-          <label class="control-label font-weight-bolder">Carrier:</label>
+          <label class="control-label">Carrier:</label>
         </div>
         <div style="display: inline;">&nbsp;</div>
         <div style="display: inline;">
@@ -161,7 +161,7 @@
       </div>
       <div class="form-group">
         <div style="display: inline;">
-          <label class="control-label font-weight-bolder">Tracking Number:</label>
+          <label class="control-label">Tracking Number:</label>
         </div>
         <div style="display: inline;">&nbsp;</div>
         <div style="display: inline;">
@@ -170,7 +170,7 @@
       </div>
       <div class="form-group">
         <div style="display: inline;">
-          <label class="control-label font-weight-bolder">Shipped:</label>
+          <label class="control-label">Shipped:</label>
         </div>
         <div style="display: inline;">&nbsp;</div>
         <div style="display: inline;">
@@ -179,7 +179,7 @@
       </div>
       <div class="form-group">
         <div style="display: inline;">
-          <label class="control-label font-weight-bolder">Arrives:</label>
+          <label class="control-label">Arrival:</label>
         </div>
         <div style="display: inline;">&nbsp;</div>
         <div style="display: inline;">
@@ -189,7 +189,7 @@
     </div>
   </div>
 </div>
-<h4>Items in this Order</h4>
+<h4>Items in Your Order</h4>
 <table class="table table-responsive" id="OrderItems" style="margin-left: auto; margin-right: auto">
   <thead>
     <tr>
@@ -204,7 +204,7 @@
     @foreach (ShoppingCartLineItemViewModel lineItem in Model.LineItem)
     {
       <tr>
-        <td><img src="@lineItem.ImageSource" style="height: 150px; display: inline; float: left" /></td>
+        <td><img src="@lineItem.ImageSource" style="height: 100px; display: inline; float: left" /></td>
         <td style="font-weight: bold">@Html.DisplayFor(modelItem => lineItem.ProductName)</td>
         <td>@Html.DisplayFor(modelItem => lineItem.ProductDescription)</td>
         <td style="width: 170px">
