--- a/XOSkinWebApp/Views/Orders/Detail.cshtml
+++ b/XOSkinWebApp/Views/Orders/Detail.cshtml
@@ -5,11 +5,10 @@
 }
 
 <div class="text-center">
-  <h1 class="display-4">Order Detail</h1>
-  @Html.Raw(ViewData["OrderDetail.WelcomeText"])
+  <h1 class="display-4">Order Details</h1>
+  @Html.Raw(ViewData["OrderDetails.WelcomeText"])
 </div>
 <p>
-  <div style="display: inline"><a class="btn-outline-dark btn" asp-area="" asp-controller="Home" asp-action="Index">Return Home</a></div>
   <div style="display: inline"><a class="btn-outline-dark btn" asp-area="" asp-controller="Orders" asp-action="Index">View Your Orders</a></div>
 </p>
 <br />
@@ -81,16 +80,16 @@
       <h4>Billing and Shipping</h4><br />
       <div class="form-group">
         <div style="display: inline; float: left; vertical-align: middle">
-          <label class="control-label font-weight-bolder">Order Confirmation Number:</label>
+          <label class="control-label">Order Confirmation Number:</label>
         </div>
         <div style="display: inline;">&nbsp;</div>
         <div style="display: inline;">
-          <span class="font-weight-bolder">@Html.Raw(Model.OrderId)</span>
+          <span class="font-weight-bolder">@Html.Raw("#XO" + (Model.OrderId + 10000))</span>
         </div>
       </div>
       <div class="form-group">
         <div style="display: inline;">
-          <label class="control-label font-weight-bolder">Sub-Total:</label>
+          <label class="control-label">Sub-Total:</label>
         </div>
         <div style="display: inline;">&nbsp;</div>
         <div style="display: inline;">
@@ -99,7 +98,7 @@
       </div>
       <div class="form-group">
         <div style="display: inline;">
-          <label class="control-label font-weight-bolder">(+) Taxes:</label>
+          <label class="control-label">(+) Taxes:</label>
         </div>
         <div style="display: inline;">&nbsp;</div>
         <div style="display: inline;">
@@ -108,7 +107,7 @@
       </div>
       <div class="form-group">
         <div style="display: inline;">
-          <label class="control-label font-weight-bolder">(+) Shipping:</label>
+          <label class="control-label">(+) Shipping:</label>
         </div>
         <div style="display: inline;">&nbsp;</div>
         <div style="display: inline;">
@@ -117,7 +116,7 @@
       </div>
       <div class="form-group">
         <div style="display: inline;">
-          <label class="control-label font-weight-bolder">(-) Code Discount:</label>
+          <label class="control-label">(-) Code Discount:</label>
         </div>
         <div style="display: inline;">&nbsp;</div>
         <div style="display: inline;">
@@ -126,7 +125,7 @@
       </div>
       <div class="form-group">
         <div style="display: inline;">
-          <label class="control-label font-weight-bolder">(-) Coupon Discount:</label>
+          <label class="control-label">(-) Coupon Discount:</label>
         </div>
         <div style="display: inline;">&nbsp;</div>
         <div style="display: inline;">
@@ -135,7 +134,7 @@
       </div>
       <div class="form-group">
         <div style="display: inline;">
-          <label class="control-label font-weight-bolder">(=) Total:</label>
+          <label class="control-label">(=) Total:</label>
         </div>
         <div style="display: inline;">&nbsp;</div>
         <div style="display: inline;">
@@ -144,7 +143,7 @@
       </div>
       <div class="form-group">
         <div style="display: inline;">
-          <label class="control-label font-weight-bolder">Billed:</label>
+          <label class="control-label">Billed:</label>
         </div>
         <div style="display: inline;">&nbsp;</div>
         <div style="display: inline;">
@@ -153,7 +152,7 @@
       </div><br />
       <div class="form-group">
         <div style="display: inline;">
-          <label class="control-label font-weight-bolder">Carrier:</label>
+          <label class="control-label">Carrier:</label>
         </div>
         <div style="display: inline;">&nbsp;</div>
         <div style="display: inline;">
@@ -162,7 +161,7 @@
       </div>
       <div class="form-group">
         <div style="display: inline;">
-          <label class="control-label font-weight-bolder">Tracking Number:</label>
+          <label class="control-label">Tracking Number:</label>
         </div>
         <div style="display: inline;">&nbsp;</div>
         <div style="display: inline;">
@@ -171,7 +170,7 @@
       </div>
       <div class="form-group">
         <div style="display: inline;">
-          <label class="control-label font-weight-bolder">Shipped:</label>
+          <label class="control-label">Shipped:</label>
         </div>
         <div style="display: inline;">&nbsp;</div>
         <div style="display: inline;">
@@ -180,7 +179,7 @@
       </div>
       <div class="form-group">
         <div style="display: inline;">
-          <label class="control-label font-weight-bolder">Arrives:</label>
+          <label class="control-label">Arrival:</label>
         </div>
         <div style="display: inline;">&nbsp;</div>
         <div style="display: inline;">
@@ -190,7 +189,7 @@
     </div>
   </div>
 </div>
-<h4>Items in this Order</h4>
+<h4>Items in Your Order</h4>
 <table class="table table-responsive" id="OrderItems" style="margin-left: auto; margin-right: auto">
   <thead>
     <tr>
@@ -205,7 +204,7 @@
     @foreach (ShoppingCartLineItemViewModel lineItem in Model.LineItem)
     {
     <tr>
-      <td><img src="@lineItem.ImageSource" style="height: 150px; display: inline; float: left" /></td>
+      <td><img src="@lineItem.ImageSource" style="height: 100px; display: inline; float: left" /></td>
       <td style="font-weight: bold">@Html.DisplayFor(modelItem => lineItem.ProductName)</td>
       <td>@Html.DisplayFor(modelItem => lineItem.ProductDescription)</td>
       <td style="width: 170px">
