Completed product listing, and product creation front-end.

--- a/XOSkinWebApp/Views/Shared/_Layout.cshtml
+++ b/XOSkinWebApp/Views/Shared/_Layout.cshtml
@@ -55,9 +55,9 @@
                   <li>
                     <a class="nav-link text-dark text-nowrap" asp-area="" asp-controller="YourEyes" asp-action="Index">Your Eyes</a>
                   </li>
-                  <li>
+                  @*<li>
                     <a class="nav-link text-dark text-nowrap" asp-area="" asp-controller="YourLipsAndSmile" asp-action="Index">Your Lips and Smile</a>
-                  </li>
+                  </li>*@
                 </ul>
               </li>
               <li class="nav-item">
@@ -115,13 +115,22 @@
                     <a class="nav-link text-dark text-nowrap" asp-area="Administration" asp-controller="LocalizedImages" asp-action="Index">Image Localization</a>
                   </li>
                   <li>
-                    <a class="nav-link text-dark text-nowrap" asp-area="Administration" asp-controller="Roles" asp-action="Index">Application Roles</a>
-                  </li>
-                  <li>
                     <a class="nav-link text-dark text-nowrap" asp-area="Administration" asp-controller="Questionnaires" asp-action="Index">Questionnaires</a>
                   </li>
                   <li>
                     <a class="nav-link text-dark text-nowrap" asp-area="Administration" asp-controller="Questions" asp-action="Index">Questions</a>
+                  </li>
+                  <li>
+                    <a class="nav-link text-dark text-nowrap" asp-area="Administration" asp-controller="Roles" asp-action="Index">Application Roles</a>
+                  </li>
+                  <li>
+                    <a class="nav-link text-dark text-nowrap" asp-area="Administration" asp-controller="Product" asp-action="Index">Products</a>
+                  </li>
+                  <li>
+                    <a class="nav-link text-dark text-nowrap" asp-area="Administration" asp-controller="Shipping" asp-action="Index">Shipping</a>
+                  </li>
+                  <li>
+                    <a class="nav-link text-dark text-nowrap" asp-area="Administration" asp-controller="Prices" asp-action="Index">Prices</a>
                   </li>
                 </ul>
               </li>
