UI layout adjustments.

--- a/XOSkinWebApp/Views/Shared/_Layout.cshtml
+++ b/XOSkinWebApp/Views/Shared/_Layout.cshtml
@@ -132,6 +132,9 @@
                   <li>
                     <a class="nav-link text-dark text-nowrap" asp-area="Administration" asp-controller="Prices" asp-action="Index">Prices</a>
                   </li>
+                  <li>
+                    <a class="nav-link text-dark text-nowrap" asp-area="Administration" asp-controller="Stocking" asp-action="Index">Stocking</a>
+                  </li>
                 </ul>
               </li>
               }
