--- a/XOSkinWebApp/Areas/Administration/Views/Product/Create.cshtml
+++ b/XOSkinWebApp/Areas/Administration/Views/Product/Create.cshtml
@@ -6,101 +6,102 @@
 }
 
 <h1>Create</h1>
-
 <h4>Product</h4>
 <hr />
-      <form asp-action="Create" enctype="multipart/form-data">
-        <div class="container-fluid">
-          <div class="row" style="width: 100%; margin-left: auto; margin-right: auto">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="col-sm-6">
-              <div class="form-group">
-                <label asp-for="ImageLarge" class="control-label">Product Image File</label>
-                <input asp-for="ImageLarge" type="file" />
-                <span asp-validation-for="ImageLarge" class="text-danger"></span>
-              </div>
-              <div class="form-group form-check">
-                <label class="form-check-label">
-                  <input class="form-check-input" asp-for="Active" /> <span class="font-weight-bolder">Product Is Active</span>
-                </label>
-              </div>
-              <div class="form-group">
-                <label asp-for="Sku" class="control-label"></label>
-                <input asp-for="Sku" class="form-control" />
-                <span asp-validation-for="Sku" class="text-danger"></span>
-              </div>
-              <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
-              </div>
-              <div class="form-group">
-                <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
-                <span asp-validation-for="Description" class="text-danger"></span>
-              </div>
-              @*<div class="form-group">
-      <label asp-for="ProductCategory" class="control-label">Product Category</label>
-      <select asp-for="ProductCategory" class="form-control" asp-items="ViewBag.ProductCategory"></select>
-      <span asp-validation-for="ProductCategory" class="text-danger"></span>
-    </div>*@
-              <div class="form-group form-check">
-                <label class="form-check-label">
-                  <input class="form-check-input" id="Kit" asp-for="Kit" /> Is This Product a Kit?
-                </label>
-              </div>
-              <div class="form-group">
-                <label asp-for="KitType" class="control-label">Kit Type</label>
-                <select asp-for="KitType" class="form-control" asp-items="ViewBag.KitType" disabled id="kit-type"></select>
-                <span asp-validation-for="KitType" class="text-danger"></span>
-              </div>
-              <div class="form-group">
-                <label asp-for="KitProduct" class="control-label">Kit Products (Press Ctrl to select more than one.)</label>
-                <select asp-for="KitProduct" class="form-control" asp-items="ViewBag.Product" disabled id="kit-products" size="6"></select>
-                <span asp-validation-for="KitProduct" class="text-danger"></span>
-              </div>
-            </div>
-            <div class="col-sm-6" style="padding-left: 10px; padding-right: 10px">
-              <div class="form-group">
-                <label asp-for="ProductType" class="control-label">ProductType</label>
-                <select asp-for="ProductType" class="form-control" asp-items="ViewBag.ProductType"></select>
-                <span asp-validation-for="ProductType" class="text-danger"></span>
-              </div>
-              <div class="form-group">
-                <label asp-for="Ingredient" class="control-label">Ingredients (Press Ctrl to select more than one.)</label>
-                <select asp-for="Ingredient" class="form-control" asp-items="ViewBag.Ingredient" id="ingredient" size="8"></select>
-                <span asp-validation-for="Ingredient" class="text-danger"></span>
-              </div>
-              <div class="form-group">
-                <label asp-for="VolumeInFluidOunces" class="control-label">Volume in Fluid Ounces</label>
-                <input asp-for="VolumeInFluidOunces" class="form-control" id="volume" />
-                <span asp-validation-for="VolumeInFluidOunces" class="text-danger"></span>
-              </div>
-              <div class="form-group">
-                <label asp-for="Ph" class="control-label"></label>
-                <input asp-for="Ph" class="form-control" id="ph" />
-                <span asp-validation-for="Ph" class="text-danger"></span>
-              </div>
-              <div class="form-group">
-                <label asp-for="Stock" class="control-label"></label>
-                <input asp-for="Stock" class="form-control" id="stock" />
-                <span asp-validation-for="Stock" class="text-danger"></span>
-              </div>
-              <div class="form-group">
-                <label asp-for="CurrentPriceId" class="control-label">Current Price</label>
-                <select asp-for="CurrentPriceId" class="form-control" asp-items="ViewBag.Price"></select>
-                <span asp-validation-for="CurrentPriceId" class="text-danger"></span>
-              </div>
-              <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-outline-dark" />
-              </div>
-            </div>
+<form asp-action="Create" enctype="multipart/form-data" id="create">
+  <div class="container-fluid">
+    <div class="row" style="width: 100%; margin-left: auto; margin-right: auto">
+      <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+      <div class="col-sm-6">
+        <div class="form-group">
+          <label asp-for="ImageLarge" class="control-label font-weight-bolder" id="image-large">Product Image File (Only .jpg or .jpeg files admitted.)</label>
+          <input asp-for="ImageLarge" type="file" /><br />
+          <span asp-validation-for="ImageLarge" class="text-danger"></span>
         </div>
+        <div class="form-group form-check">
+          <label class="form-check-label">
+            <input class="form-check-input" asp-for="Active" /> <span class="font-weight-bolder">Product Is Active</span>
+          </label>
+        </div>
+        <div class="form-group">
+          <label asp-for="Sku" class="control-label"></label>
+          <input asp-for="Sku" class="form-control" />
+          <span asp-validation-for="Sku" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+          <label asp-for="Name" class="control-label"></label>
+          <input asp-for="Name" class="form-control" />
+          <span asp-validation-for="Name" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+          <label asp-for="Description" class="control-label"></label>
+          <input asp-for="Description" class="form-control" />
+          <span asp-validation-for="Description" class="text-danger"></span>
+        </div>
+        <div class="form-group form-check">
+          <label class="form-check-label">
+            <input class="form-check-input" id="Kit" asp-for="Kit" /> <span class="font-weight-bolder">Is This Product a Kit?</span>
+          </label>
+        </div>
+        <div class="form-group">
+          <label asp-for="KitType" class="control-label">Kit Type</label>
+          <select asp-for="KitType" class="form-control" asp-items="ViewBag.KitType" disabled id="kit-type"></select>
+          <span asp-validation-for="KitType" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+          <label asp-for="KitProduct" class="control-label">Kit Products (Press Ctrl to select more than one.)</label>
+          <select asp-for="KitProduct" class="form-control" asp-items="ViewBag.Product" disabled id="kit-products" size="6"></select>
+          <span asp-validation-for="KitProduct" class="text-danger"></span>
+        </div>
+      </div>
+      <div class="col-sm-6" style="padding-left: 10px; padding-right: 10px">
+        <div class="form-group">
+          <label asp-for="ProductType" class="control-label">ProductType</label>
+          <select asp-for="ProductType" class="form-control" asp-items="ViewBag.ProductType"></select>
+          <span asp-validation-for="ProductType" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+          <label asp-for="Ingredient" class="control-label">Ingredients (Press Ctrl to select more than one.)</label>
+          <select asp-for="Ingredient" class="form-control" asp-items="ViewBag.Ingredient" id="ingredient" size="8"></select>
+          <span asp-validation-for="Ingredient" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+          <label asp-for="VolumeInFluidOunces" class="control-label">Volume in Fluid Ounces</label>
+          <input asp-for="VolumeInFluidOunces" class="form-control" id="volume" />
+          <span asp-validation-for="VolumeInFluidOunces" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+          <label asp-for="Ph" class="control-label"></label>
+          <input asp-for="Ph" class="form-control" id="ph" />
+          <span asp-validation-for="Ph" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+          <label asp-for="ShippingWeightLb" class="control-label">Shipping Weight in Pounds (lb)</label>
+          <input asp-for="ShippingWeightLb" class="form-control" id="shipping-weight" />
+          <span asp-validation-for="ShippingWeightLb" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+          <label asp-for="Stock" class="control-label">Original Stock</label>
+          <input asp-for="Stock" class="form-control" id="stock" />
+          <span asp-validation-for="Stock" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+          <label asp-for="CurrentPriceId" class="control-label">Current Price</label>
+          <select asp-for="CurrentPriceId" class="form-control" asp-items="ViewBag.Price"></select>
+          <span asp-validation-for="CurrentPriceId" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+          <input type="submit" value="Create" class="btn btn-outline-dark" />
+        </div>
+      </div>
     </div>
+  </div>
+  @Html.Hidden("ActionCreate", "True")
+  @Html.Hidden("OriginalProductName", "")
 </form>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+  <a asp-action="Index">Back to List</a>
 </div>
 
 <script type="text/javascript">
@@ -111,6 +112,19 @@
     $('#kit-type').val('0');
   });
 
+  $('#create').submit(function (e) {
+    validateImagePath(e);
+  });
+
+  alert($("#image-large").size());
+
+  function validateImagePath(e) {
+    ($("#image-large").prop('size').trim() == '')
+    {
+      e.preventDefault();
+    }
+  }
+
   function KitToggle() {
     if ($('#Kit').prop('checked')) {
       $('#volume').val('');
@@ -119,6 +133,8 @@
       $('#ph').attr('readonly', true);
       $('#stock').val('');
       $('#stock').attr('readonly', true);
+      $('#shipping-weight').val('');
+      $('#shipping-weight').attr('readonly', true);
       $('#ingredient').attr('disabled', true);
       $('#kit-type').attr('disabled', false);
       $('#kit-products').attr('disabled', false);
@@ -126,6 +142,7 @@
     } else {
       $('#volume').attr('readonly', false);
       $('#ph').attr('readonly', false);
+      $('#shipping-weight').attr('readonly', false);
       $('#stock').attr('readonly', false);
       $('#ingredient').attr('disabled', false);
       $('#kit-type').attr('disabled', true);
