--- a/XOSkinWebApp/Views/YourLipsAndSmile/Index.cshtml
+++ b/XOSkinWebApp/Views/YourLipsAndSmile/Index.cshtml
@@ -60,7 +60,7 @@
         <p>
           <div class="flex-container" style="vertical-align: middle">
             <div class="img-zoom-container flex-child" style="width: 50%; margin-left: auto; margin-right: auto; ">
-              <img id="i_@item.ImageSource" src="@item.ImageSource" style="width: 180px; height: 180px">
+              <img id="i_@item.ImageSource" src="@item.ImageSource" style="width: 180px;">
             </div>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <div id="d_@item.ImageSource" class="img-zoom-result flex-child" style="width: 50%; margin-left: auto; margin-right: auto"></div>
