Fixing typographical errors.

--- a/XOSkinWebApp/Views/Kits/Index.cshtml
+++ b/XOSkinWebApp/Views/Kits/Index.cshtml
@@ -48,7 +48,7 @@
 </script>
 
 <div class="text-center">
-  <h1 class="display-4">Top Sellers</h1>
+  <h1 class="display-4">Kits</h1>
   @Html.Raw(ViewData["Kits.WelcomeText"])
 </div>
 
