--- a/XOSkinWebApp/Views/Shared/_Layout.cshtml
+++ b/XOSkinWebApp/Views/Shared/_Layout.cshtml
@@ -133,7 +133,7 @@
                     <a class="nav-link text-dark text-nowrap" asp-area="Administration" asp-controller="Prices" asp-action="Index">Prices</a>
                   </li>
                   <li>
-                    <a class="nav-link text-dark text-nowrap" asp-area="Administration" asp-controller="Stocking" asp-action="Index">Stocking</a>
+                    <a class="nav-link text-dark text-nowrap" asp-area="Administration" asp-controller="Inventory" asp-action="Index">Inventory</a>
                   </li>
                 </ul>
               </li>
