Fixed zoom image load bug. Functions are now only being called after all document images have loaded.

--- a/XOSkinWebApp/Views/Shared/_Layout.cshtml
+++ b/XOSkinWebApp/Views/Shared/_Layout.cshtml
@@ -127,10 +127,10 @@
                     <a class="nav-link text-dark text-nowrap" asp-area="Administration" asp-controller="Product" asp-action="Index">Products</a>
                   </li>
                   <li>
-                    <a class="nav-link text-dark text-nowrap" asp-area="Administration" asp-controller="Shipping" asp-action="Index">Shipping</a>
+                    <a class="nav-link text-dark text-nowrap" asp-area="Administration" asp-controller="Prices" asp-action="Index">Prices</a>
                   </li>
                   <li>
-                    <a class="nav-link text-dark text-nowrap" asp-area="Administration" asp-controller="Prices" asp-action="Index">Prices</a>
+                    <a class="nav-link text-dark text-nowrap" asp-area="Administration" asp-controller="OrderFulFillment" asp-action="Index">Order Fulfillment</a>
                   </li>
                   <li>
                     <a class="nav-link text-dark text-nowrap" asp-area="Administration" asp-controller="Inventory" asp-action="Index">Inventory</a>
