--- a/XOSkinWebApp/Views/TopSellers/Index.cshtml
+++ b/XOSkinWebApp/Views/TopSellers/Index.cshtml
@@ -79,9 +79,28 @@
   </tr>
   }
 </table>
-<script>
-  @foreach (var item in Model)
-  {
-    @Html.Raw("imageZoom('i_" + @item.ImageSource + "', 'd_" + item.ImageSource + "');");
-  }
+
+<script type="text/javascript">
+  $(document).ready(function () {
+    var imgs = document.images,
+      len = imgs.length,
+      counter = 0;
+
+    [].forEach.call(imgs, function (img) {
+      if (img.complete)
+        incrementCounter();
+      else
+        img.addEventListener('load', incrementCounter, false);
+    });
+
+    function incrementCounter() {
+      counter++;
+      if (counter === len) {
+        @foreach (var item in Model)
+        {
+          @Html.Raw("imageZoom('i_" + @item.ImageSource + "', 'd_" + item.ImageSource + "');");
+        }
+      }
+    }
+  });
 </script>
