--- a/XOSkinWebApp/Areas/Administration/Views/Product/Create.cshtml
+++ b/XOSkinWebApp/Areas/Administration/Views/Product/Create.cshtml
@@ -20,7 +20,7 @@
         </div>
         <div class="form-group form-check">
           <label class="form-check-label">
-            <input class="form-check-input" asp-for="Active" /> <span class="font-weight-bolder">Product Is Active</span>
+            <input class="form-check-input" asp-for="Active" checked /> <span class="font-weight-bolder">Product Is Active</span>
           </label>
         </div>
         <div class="form-group">
