SKU unicity validation when creating a new product.

--- a/XOSkinWebApp/Areas/Administration/Views/Product/Create.cshtml
+++ b/XOSkinWebApp/Areas/Administration/Views/Product/Create.cshtml
@@ -98,6 +98,7 @@
   </div>
   @Html.Hidden("ActionCreate", "True")
   @Html.Hidden("OriginalProductName", "")
+  @Html.Hidden("OriginalSku", "")
 </form>
 
 <div>
