--- a/XOSkinWebApp/Areas/Administration/Views/Product/Create.cshtml
+++ b/XOSkinWebApp/Areas/Administration/Views/Product/Create.cshtml
@@ -91,6 +91,11 @@
           <span asp-validation-for="CurrentPriceId" class="text-danger"></span>
         </div>
         <div class="form-group">
+          <label asp-for="CurrentCostId" class="control-label font-weight-bolder">Current Cost</label>
+          <select asp-for="CurrentCostId" class="form-control" asp-items="ViewBag.Cost"></select>
+          <span asp-validation-for="CurrentCostId" class="text-danger"></span>
+        </div>
+        <div class="form-group">
           <input type="submit" value="Create" class="btn btn-outline-dark" />
         </div>
       </div>
